Fixed initialization, shutdown, config
Added framelistener and window event listener
Appropriately deinit Ogre
Consolidated bin and asset directories

--- a/assets/plugins.cfg
+++ b/assets/plugins.cfg
@@ -1,4 +1,5 @@
+PluginFolder=..\bin\
 Plugin=RenderSystem_GL
-Plugin=Plugin_ParticleFX
-Plugin=Plugin_OctreeZone
-Plugin=Plugin_OctreeSceneManage
+#Plugin=Plugin_ParticleFX
+#Plugin=Plugin_OctreeZone
+#Plugin=Plugin_OctreeSceneManage
